Fix Collapse animation not working properly with flex box

--- a/src/core/collapse/collapse.module.css
+++ b/src/core/collapse/collapse.module.css
@@ -1,5 +1,7 @@
 .collapse {
   overflow: hidden;
+  min-width: 0;
+  min-height: 0;
 }
 
 .collapseH {
@@ -36,6 +38,13 @@
 
 .collapseWrapper {
   display: flex;
+  min-width: 0;
+  min-height: 0;
+}
+
+.collapseWrapper {
+  min-width: 0;
+  min-height: 0;
 }
 
 .collapseH .collapseWrapperInner {
